# gemini-web-mcp

./: .env.example  .gitignore  =1.20.0  AGENTS.md  MANIFEST.in  README.md  README.zh-CN.md  SKILL_README.md  SKILL_SUMMARY.md  _test.py  cookies.json  glama.json  prompts.json  prompts_default.json  pyproject.toml  skills-lock.json  test_code_structure.py  test_code_verification.py  test_cookie.py  test_cookie_manager.py  test_skill.py  test_skill_import.py  test_with_cookie.py
.agents/skills/gemini-web-mcp/: SKILL.md
.agents/skills/gemini-web-mcp/agents/: openai.yaml
.agents/skills/gemini-web-mcp/references/: tool_surface.md
.agents/skills/python-mcp-server-generator/: SKILL.md
.codex/skills/gemini-web-mcp/: SKILL.md
.codex/skills/gemini-web-mcp/agents/: openai.yaml
.github/workflows/: ci.yml  codeql.yml
docs/: README.md  api-reference.md  architecture.md  changelog.md  configuration.md  contributing.md  cookie-setup.md  faq.md  launch-kit.md  live-ui-coverage.md  manual-testing.md  models.md  next-steps-prompt.md  quickstart.md  release-notes-2026-05-23.md  tools.md  troubleshooting.md
evaluations/: gemini_web_mcp_contract.xml
scripts/: package_release.py
src/: auth.py  client_manager.py  client_wrapper.py  constants.py  cookie_manager.py  error_handler.py  remote_chat_cleanup_manager.py  server.py  session_manager.py  skill_server.py  thinking_client.py
src/tools/: __init__.py  annotations.py  chat.py  file.py  image.py  manage.py  manifest_data.py  media.py  prompts.py  research.py  utils.py
tests/: test_chat_session_lifecycle.py  test_chat_tools.py  test_cleanup_test_artifacts.py  test_client_manager.py  test_client_wrapper.py  test_cookie_manager.py  test_cookie_manager_browser.py  test_core.py  test_doctor_helpers.py  test_error_and_session.py  test_evaluations.py  test_file_tools.py  test_imports.py  test_manage_final_branches.py  test_manage_gems_models_inventory.py  test_manage_helpers_edge_cases.py  test_manage_history_account_tools.py  test_manage_notebook_history_facade.py  test_manage_readonly_markdown_handlers.py  test_manage_remaining_branches.py  test_manage_scheduled_actions.py  test_media_tools.py  test_prompts_tools.py  test_remote_chat_cleanup_manager.py  test_research_report_helpers.py  test_research_tools.py  test_server_cookie_tools.py  test_server_core_tools.py  test_skill_packaging.py  test_skill_server_helpers.py  test_skill_server_prompts_cookie.py  test_thinking_client.py  test_tool_helpers.py  test_tool_workflows.py
