[project]
name = "gemini-mcp-server"
version = "2.0.0"
description = "MCP server for Gemini Web API reverse engineering"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Gemini MCP Server Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "gemini-webapi>=2.0.0",
    "mcp>=1.0.0",
    "fastmcp>=1.0.0",
]

[project.optional-dependencies]
browser = ["browser-cookie3>=0.19.0"]
image = ["pillow>=10.0.0"]
all = ["browser-cookie3>=0.19.0", "pillow>=10.0.0"]

[project.scripts]
gemini-mcp-server = "src.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
