[project]
name = "gemini-mcp-server"
version = "2.2.0"
description = "MCP server for Gemini Web API reverse engineering"
requires-python = ">=3.11"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    {name = "Gemini MCP Server Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gemini-webapi>=2.0.0",
    "mcp>=1.0.0",
    "fastmcp>=1.0.0",
]

[project.optional-dependencies]
browser = ["browser-cookie3>=0.19.0"]
image = ["pillow>=10.0.0"]
all = ["browser-cookie3>=0.19.0", "pillow>=10.0.0"]
dev = ["build>=1.2.0", "pytest>=8.0.0"]

[project.scripts]
gemini-mcp-server = "src.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# Third-party dependencies that ship no py.typed marker nor PEP 561 stubs.
module = ["gemini_webapi.*", "browser_cookie3"]
ignore_missing_imports = true
